# TEG

./: .gitignore  MUJOCO_LOG.TXT  README.md  algorithms_tests.ipynb  calculus.ipynb  pyproject.toml  requirements.txt  setup.py  test.py  testEnv.py  testMonitor.py  test_colab.ipynb  test_requirements.txt
.ipynb_checkpoints/: algorithms_tests-checkpoint.ipynb  calculus-checkpoint.ipynb  ddpg-checkpoint.ipynb  test_colab-checkpoint.ipynb
RobotEnv/: UR5_Env.py  __init__.py
RobotEnv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
RobotEnv/algorithms/: vpg.py
RobotEnv/controllers/: classic_controller.py  smart_controller.py
RobotEnv/envs/: UR5_Env.py
RobotEnv/experiments/: circle.py  environment.py  ik.py  line.py  random_target.py
RobotEnv/tools/: controllers.py  ik.py  logger.py  simulation.py
RobotEnv/training/: train_ddpg.py  train_vpg.py
TEG/: __init__.py
TEG/envs/: UR5_Env.py  UR5_Env2.py  UR5_random_target_v0.py  (+1 more)
data_exp1/: config.json  progress.txt  vars.pkl
data_exp2/: config.json  progress.txt
examples/: circle.py  colab_setup.ipynb  environment.py  random_target.py  test_tools.ipynb
experiments/: circle.py  environment.py  environment2.py  line.py  random_target.py  test.py  testEnv.py  test_UR5Controller.py  test_agent.py  test_pid.py  test_recta.py  train_ddpg.py  train_vpg.py
notebooks/: agent_training.ipynb  calculus.ipynb  colab_setup.ipynb  information.ipynb  test_colab.ipynb  test_tools.ipynb  test_trayectories.ipynb  training_agents.ipynb  training_setup.ipynb
training/: multi_ddpg.py  train_agent1.py  train_agent2.py
(+59 files in other folders)
