[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TEG"
authors = [{ name="Alexis Fraudita", email="fraumalex@gmail.com" }]
description = "Reinforcement Learning Environments for train RL agents"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "Apache License 2.0" }
keywords = ["Reinforcement Learning", "Mujoco", "RL", "AI", "TEG"]
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'License :: OSI Approved :: Apache  Software License'
]
dependencies = [
    "numpy >=1.23.5",
    "mujoco >=2.3.1.post1",
    "gymnasium>=0.27.1"
]
dynamic = ["version"]

[project.optional-dependencies]
testing = [
    "pytest == 7.1.3",
]

[project.urls]
"Homepage" = "https://github.com/alefram/TEG"
"Bug Report" = "https://github.com/alefram/TEG/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include =  ["TEG", "TEG.*"]

[tool.setuptools.package-data]
TEG = [
    "*.stl",
    "*.urdf",
    "*.xml",
]

